<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TripSaver</string>
    <string name="euro">Euro</string>
    <string name="andereWaehrung">other Currency</string>
    <string name="umrechen">Calculate</string>
    <string name="umrechnungsfaktor">Changefactor</string>
    <string name="log">Log</string>
    <string name="logaendern">Change Entries</string>
    <string name="logexportieren">Export Log</string>
    <string name="filtern">Set Filters</string>
    <string name="bilanzexportieren">Export Report</string>
    <string name="title_activity_edit_log_filter">Edit Filters</string>
    <string name="nach">After</string>
    <string name="vor">Before</string>
    <string name="spaeter">Later</string>
    <string name="frueher">Earlier</string>
    <string name="zeigeversteckte">Show Hidden</string>
    <string name="mehrals">More than</string>
    <string name="wenigerals">Less than</string>
    <string name="zeigekommentar">Show Comment</string>
    <string name="zeigemenge">Show Amount</string>
    <string name="zeigemeumgerechnet">Show Calculated</string>
    <string name="zeigeumrechnungsfaktor">Show Changefactor</string>
    <string name="zeigeeinnahmen">Show Deposit</string>
    <string name="zeigeausgaben">Show Charge</string>
    <string name="speicher">Save</string>
    <string name="dateNach">Show Entries after %1$s.</string>
    <string name="timeNach">After %1$s o\'clock</string>
    <string name="dateNachUndVor">Show Entries after %1$s and before %2$s.</string>
    <string name="timeNachUndVor">After %1$s and before %2$s o\'clock.</string>
    <string name="dateVor">Show Entries before %1$s.</string>
    <string name="timeVor">Before %1$s o\'clock</string>
    <string name="zeigezeit">Show Time</string>
    <string name="speicherpfad">Savingpath: %1$s</string>
    <string name="gutschrift">Deposit</string>
    <string name="lastschrift">Charge</string>
    <string name="Input">Input</string>
    <string name="umrechnungsfaktorKurz">Changefact.</string>
    <string name="Output">Output</string>
    <string name="Kommentar">Comment</string>
    <string name="versteckt">Hidden</string>
    <string name="menge">Amount</string>
    <string name="datum">Date</string>
    <string name="Uhrzeit">Time</string>
    <string name="werteaktualisieren">Update Values</string>
    <string name="bilanz">Report</string>
    <string name="averageExpenses">Your average expenses per day were: %1$.2f, and your average income was: %2$.2f. This leads to an average of %3$.2f per day.</string>
    <string name="result">This leads to an result of %1$.2f of your Input currency over %2$d days.</string>
    <string name="einnahmen">Deposit</string>
    <string name="ausgaben">Charge</string>
    <string name="gesammteEinnahmen">Total Deposits</string>
    <string name="gesammteAusgaben">Total Charges</string>
    <string name="loeschen">Delete</string>
    <string name="leeresFeld">The field must not stay empty!</string>
    <string name="sicherloeschen">Are you sure you want to delete this entry?</string>
    <string name="ja">Yes</string>
    <string name="nein">No</string>
    <string name="name">Name</string>
    <string name="wert">Value</string>
    <string name="editChangefactor">Edit Changefactors</string>
    <string name="neuerChangeFactor">Add Changefactor</string>
    <string name="kommentarfeldleeren">Clear Comment</string>
    <string name="willkommen">Welcome</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial1">This is going to be a quick Tutorial on how to use this app.</string>
    <string name="tutorial2">At the top you can see two input fields for numbers. If you want to calculate from Euro to another Currency than simply put the amount you want to change in the first field and hit the calculate button on the bottom of the App. It also works the other way around. Put your value in the second field, mind the dot on the left side of the field, it should be next to to field you want to use for the calculation, and hit the calculate button.</string>
    <string name="tutorial3">As an advanced feature, you can add a comment to your calculation, simple write your comment in the comment field before you hit the button. You can also specify wheter you used the money for a payment (select the Charge Box) or got it (select the Deposit Box).</string>
    <string name="tutorial4">On the topmost right you can see three dots, when you click on them the menu appears. Here you can change the filters for the log and report, edit the calculation history, export them or edit and add changefactors. To look at the log you have to click on the text Log, which is either on the left of the dots or in the menu. Beside or under the log is the report.</string>
    <string name="tutorial5">I hope this App is useful for you and wish you a nice holiday :)</string>
    <string name="ueberspringen">Skip</string>
    <string name="weiter">Continue</string>
    <string name="start">Start</string>
    <string name="faq" translatable="false">FAQ</string>
</resources>
