<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="laurenzsoft.com.waehrungsrechner.MainActivity">



    <Button
        android:id="@+id/clearEuro"
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dip"
        android:background="@drawable/delete"
        android:layout_alignBaseline="@+id/euroIn"/>
    <RadioButton
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dip"
        android:layout_alignBottom="@+id/euroIn"
        android:id="@+id/selectionEuro" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="35dip"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/euroIn"
        android:layout_below="@+id/euroTextView"
        android:layout_toEndOf="@+id/selectionEuro"
        android:layout_toRightOf="@+id/selectionEuro"
        android:imeOptions="actionDone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/andereWaehrung"
        android:id="@+id/otherTextView"
        android:layout_below="@+id/euroIn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/euro"
        android:id="@+id/euroTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />


    <Button
        android:id="@+id/clearAndere"
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dip"
        android:background="@drawable/delete"
        android:layout_alignBaseline="@+id/andereIn"/>
    <RadioButton
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dip"
        android:layout_alignBottom="@+id/andereIn"
        android:id="@+id/selectionOther" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/andereIn"
        android:paddingRight="35dip"
        android:layout_below="@+id/otherTextView"
        android:layout_toEndOf="@+id/euroTextView"
        android:layout_toRightOf="@+id/euroTextView"
        android:imeOptions="actionDone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberSigned|numberDecimal"
        android:digits="0123456789."
        android:id="@+id/changeFactorIn"
        android:layout_below="@+id/changeFactorTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/umrechnungsfaktor"
        android:id="@+id/changeFactorTextView"
        android:layout_below="@+id/andereIn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/umrechen"
        android:id="@+id/calculateButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gutschrift"
        android:id="@+id/gutschriftCheckBox"
        android:layout_above="@+id/calculateButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:textSize="16sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastschrift"
        android:id="@+id/lastschriftCheckBox"
        android:layout_above="@+id/calculateButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:checked="true"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Kommentar"
        android:id="@+id/kommentarTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/changeFactorIn" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/kommentarEditEditText"
        android:layout_below="@+id/kommentarTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/gutschriftCheckBox" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_above="@+id/changeFactorIn"
        android:layout_toRightOf="@+id/changeFactorTextView"
        android:layout_toEndOf="@+id/changeFactorTextView"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/changeFactorTextView"
        android:layout_marginLeft="20dp" />

</RelativeLayout>
